add POM